--- a/Combined_jupyter_code4.html
+++ b/Combined_jupyter_code4.html
@@ -12570,7 +12570,8 @@ div#notebook {
 
 <div class="prompt"></div>
 
-
+overflow-y: scroll;
+    max-height:500px;
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>&lt;class &#39;pandas.core.frame.DataFrame&#39;&gt;
 DatetimeIndex: 48378 entries, 2020-01-04 00:00:00 to 2020-01-04 23:59:00
